# urban-energy-simulation-backend

./: .gitignore  Dockerfile  README.md  gis.py  main.py  pyproject.toml  requirements.txt  webservice.py
config/: config.py  configuration.json  dependancy.json
data_source/config/: configuration.json
data_source/files/: gis.py  map_creator.py
data_source/output_files/: Building_construction_year.geojson  OSM_building.geojson  buildings.geojson  buildings_census.geojson  db_census_section.geojson  filtered_area.geojson  kriging_output.geojson  output_building.geojson  polygon_from_building.geojson  selected_boundaries.geojson  selected_building.geojson  selected_census_section.geojson  selected_shapefile.geojson
features_collection/: feature_factory.py
features_collection/features/: area.py  building_id.py  census_id.py  construction_type.py  cooling.py  gross_floor_area.py  heating.py  height.py  hvac_type.py  n_family.py  n_floor.py  neighbours_ids.py  neighbours_surfaces.py  net_leased_area.py  project_id.py  tabula_id.py  tabula_type.py  tot_area_per_cens_id.py  usage.py  w2w.py  year_of_construction.py
model_extraction/data_manager/: data_check.py  data_validation.py  db_check.py  osm_check.py  utility.py
model_extraction/features_collection/: base_feature.py  feature_factory.py
project_services/: helper.py  service_flowchart.mmd  webservice.py
scenario/: project_id.py  scenario_id.py  scenario_manager.py  scenarios.py
src/: Project.py  config.json
user_webservice/: helper.py  polygon_profile.txt  request.json  serializers.py  webservice.py
(+141 files in other folders)
