[tool.poetry]
name = "automatic-scenario-creation"
version = "0.1.0"
description = ""
authors = ["Saeid Zolfaghari <saeidz70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
geopandas = "^1.0.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
requests = "^2.32.3"
osmnx = "^1.9.4"
shapely = "^2.0.6"
geojson = "^3.1.0"
djangorestframework = "3.15.2"
PyKrige = "^1.7.2"
rasterio = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
