[tool.poetry]
name = "automatic-scenario-creation"
version = "0.1.0"
description = ""
authors = ["Saeid Zolfaghari <saeidz70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
CherryPy = "18.10.0"
geopandas = "0.14.4"
numpy = "1.26.4"
osmnx = "1.9.4"
pandas = "2.2.2"
PyKrige = "1.7.2"
requests = "2.32.3"
rioxarray = "0.18.0"
shapely = "2.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
